--- a/commands.html
+++ b/commands.html
@@ -250,7 +250,7 @@
                     <div class="row">
                         <div class="command-col">
                             <h3>дабот <b>расшифровать</b> <i>[текст]</i></h3>
-                            <p>Расшифровывает текст из кодировки Base64. <span style="color: #a22">Доступны только символы ASCII, т.е. кириллица не поддерживается!</span></p>
+                            <p>Расшифровывает текст из кодировки Base64.</p>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>рп</b> <i>[действие] [участник]</i></h3>
