Changed bot link

--- a/add.html
+++ b/add.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=https://discord.com/oauth2/authorize?client_id=978703371630444544&permissions=8&scope=bot">
+        <meta http-equiv="refresh" content="0; url=https://discord.com/api/oauth2/authorize?client_id=978703371630444544&permissions=416380616150&scope=bot">
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
         <title>Da-bot - Добавить бота</title>
         <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
             <br><br><br><br>
             <p>Вы должны были автоматически переаправиться на страницу добавления бота.<br>Если этого не случилось, нажмите на кнопку ниже.</p>
             <br><br><br>
-            <a href="https://discord.com/oauth2/authorize?client_id=978703371630444544&permissions=8&scope=bot" class="button">Перейти</a>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=978703371630444544&permissions=416380616150&scope=bot" class="button">Перейти</a>
         </div>
     </body>
 </html>
