--- a/commands.html
+++ b/commands.html
@@ -61,30 +61,61 @@
             </section>
             <section>
                 <div class="rect-row">
-                    <h1>Новые команды</h1><br>
+                    <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
-                            <h3>дабот <b>какойязык</b> <i>[текст]</i></h3>
-                            <p>Показывает, какие буквы написаны кириллицей.</p>
+                            <h3>дабот <b>хексвргб</b> <i>[hex-цвет]</i></h3>
+                            <p>Конвертирует цвет формата HEX в цвет формата RGB.</p>
                         </div>
                         <div class="command-col">
-                            <h3>дабот <b>лоремипсум</b></h3>
-                            <p>Генерирует текст по шаблону текста "Лорем ипсум долор сит амет".</p>
+                            <h3>дабот <b>ргбвхекс</b> <i>[красный] [зелёный] [синий]</i></h3>
+                            <p>Конвертирует цвет формата RGB в цвет формата HEX.</p>
                         </div>
                         <div class="command-col">
-                            <h3>дабот <b>текствцифры</b> <i>[текст]</i></h3>
-                            <p>Показывает текст, но таким, каким бы он был, если бы каждая буква была цифрой.</p>
+                            <h3>дабот <b>длинастроки</b> <i>[текст]</i></h3>
+                            <p>Показывает количество символов в тексте.</p>
                         </div>
                         <div class="command-col">
-                            <h3>дабот <b>айпи</b> <i>[айпи]</i></h3>
-                            <p>Показывает информацию о введённом IP-адресе, такую как адрес, компания и ссылку на Google Maps.</p>
+                            <h3>дабот <b>рандомныйргб</b></h3>
+                            <p>Генерирует случайный цвет в формате RGB.</p>
                         </div>
                     </div>
-                </div>
-            </section>
-            <section>
-                <div class="rect-row">
-                    <h1>Список команд</h1><br>
+                    <div class="row">
+                        <div class="command-col">
+                            <h3>дабот <b>рандомныйхекс</b></h3>
+                            <p>Генерирует случайный цвет в формате HEX.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>выбратьбукву</b> <i>[текст]</i></h3>
+                            <p>Выбирает случайную букву из текста, включая пробелы, цифры и другие символы.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>блюр</b></h3>
+                            <p>Размывает прикреплённую картинку.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>фем</b> <i>[имя]</i></h3>
+                            <p>Показывает то, что бот чувствует по отношению к имени.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
+                            <h3>дабот <b>выключитьответки</b></h3>
+                            <p>Полностью отключает все ответки в боте на сервере.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>включитьответки</b></h3>
+                            <p>Полностью включает все ответки в боте на сервере.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>выключитьматы</b></h3>
+                            <p>Перекрывает доступ к командам, в которых возможны маты. Также отключает ответки.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>включитьматы</b></h3>
+                            <p>Открывает доступ к командам, в которых возможны маты. Также включает ответки.</p>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="command-col">
                             <h3>дабот <b>какойязык</b> <i>[текст]</i></h3>
