Fixed missing text

--- a/commands.html
+++ b/commands.html
@@ -92,6 +92,7 @@
                         <div class="command-col">
                             <h3>дабот <b>блюр</b></h3>
                             <p>Размывает прикреплённую картинку.</p>
+                            <h6>Необходимо прикрепить картинку!</h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>фем</b> <i>[имя]</i></h3>
