--- a/faq.html
+++ b/faq.html
@@ -117,9 +117,8 @@
                     <div class="row">
                         <div class="command-col">
                             <h3>Не хочу ответки, надоели. Можно их убрать для моего сервера?</h3>
-                            <p class="tos-paragraph">Раньше было можно, а сейчас все, сейчас капут. 
-                                Может, потом эта возможность появится 
-                                обратно, но сейчас всё.</p>
+                            <p class="tos-paragraph">Недавно эта возможность появилась. Для отключения ответок нужно написать команду 
+                                <b>-выключитьответки</b>. Чтобы обратно их включить, надо написать <b>-включитьответки</b>.</p>
                         </div>
                     </div>
                     <div class="row">
