Added missing commands

--- a/commands.html
+++ b/commands.html
@@ -64,6 +64,24 @@
                     <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
+                            <h3>дабот <b>амогуснуть</b> <i>[текст]</i></h3>
+                            <p>Создаёт текст, состоящий только из амогусов (можно конвертировать обратно командой <b>дабот разамогуснуть</b>)</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>дабот разамогуснуть</b> <i>[текст]</i></h3>
+                            <p>Конвертирует текст из амогусов, получаемый командой <b>дабот амогуснуть</b> в обычный текст.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>крипта</b> <i>[имя крипты на английском]</i></h3>
+                            <p>Показывает информацию о введённой криптовалюте (поддерживаются не все, в основном только известные).</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>самоедлинное</b> <i>[текст]</i></h3>
+                            <p>Показывает информацию о самом длинном/самых длинных словах в указанном тексте.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
                             <h3>дабот <b>хексвргб</b> <i>[hex-цвет]</i></h3>
                             <p>Конвертирует цвет формата HEX в цвет формата RGB.</p>
                         </div>
