--- a/commands.html
+++ b/commands.html
@@ -68,7 +68,7 @@
                             <p>Создаёт текст, состоящий только из амогусов (можно конвертировать обратно командой <b>дабот разамогуснуть</b>)</p>
                         </div>
                         <div class="command-col">
-                            <h3>дабот <b>дабот разамогуснуть</b> <i>[текст]</i></h3>
+                            <h3>дабот <b>разамогуснуть</b> <i>[текст]</i></h3>
                             <p>Конвертирует текст из амогусов, получаемый командой <b>дабот амогуснуть</b> в обычный текст.</p>
                         </div>
                         <div class="command-col">
