--- a/external-resources.html
+++ b/external-resources.html
@@ -394,6 +394,21 @@
                             <td>Webpage/API</td>
                             <td>Used only in several commands</td>
                         </tr>
+                        <tr>
+                            <td>https://api.mcsrvstat.us/2/</td>
+                            <td>Webpage/API</td>
+                            <td>Used only in several commands</td>
+                        </tr>
+                        <tr>
+                            <td>https://api.mcsrvstat.us/bedrock/2/</td>
+                            <td>Webpage/API</td>
+                            <td>Used only in several commands</td>
+                        </tr>
+                        <tr>
+                            <td>https://api.coincap.io/v2/assets/</td>
+                            <td>Webpage/API</td>
+                            <td>Used only in several commands</td>
+                        </tr>
                     </table>
                 </div>
             </section>
