Fix spelling mistake

--- a/commands.html
+++ b/commands.html
@@ -311,8 +311,8 @@
                             <p>Показывает погоду в указанном месте (если может).</p>
                         </div>
                         <div class="command-col">
-                            <h3>дабот <b>анекдот</b> <i>[число от 1.0 до 5.0]</i></h3>
-                            <p>Показывает своё число от 1.0 до 5.0. Если ваше число меньше, вы выиграли, а если больше - проиграли.</p>
+                            <h3>дабот <b>анекдот</b> <i>[число (необязательно)]</i></h3>
+                            <p>Показывает случайный анекдот из базы. Если указано число, покажет анекдот под указанным номером.</p>
                         </div>
                     </div>
                     <div class="row">
