--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="images/logo.png">
     </head>
     <body style="background-color: #ED9553">
+        <script src="js/konami.js"></script>
         <section class="header">
             <nav>
                 <a href="index.html">
