--- a/commands.html
+++ b/commands.html
@@ -53,8 +53,8 @@
                             <p>Генерирует случайную информацию в качестве деанонимизации указанного участника и выводит её.</p>
                         </div>
                         <div class="command-col">
-                            <h3>дабот <b>айпи</b> <i>[текст]</i></h3>
-                            <p>Показывает информацию о введённом IP-адресе, такую как адрес, компания и ссылку на Google Maps.</p>
+                            <h3>дабот <b>недавно</b> <i>[участник]</i></h3>
+                            <p>Выводит историю про котёнка, роль которого играет указанный участник.</p>
                         </div>
                     </div>
                 </div>
@@ -62,6 +62,24 @@
             <section>
                 <div class="rect-row">
                     <h1>Список команд</h1><br>
+                    <div class="row">
+                        <div class="command-col">
+                            <h3>дабот <b>заблокироватьканал</b> <i>[канал (необязательно)]</i></h3>
+                            <p>Блокирует функцию ответок в указанном канале. Если канал не указан, заблокирует ответки в канале с вашим сообщением. (Команда блокирует только ответки, не команды!)</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>разблокироватьканал</b> <i>[канал (необязательно)]</i></h3>
+                            <p>Разрешает использовать функцию ответок в указанном канале. Если канал не указан, разрешит ответки в канале с вашим сообщением.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>майнкрафтсервер</b> <i>[айпи сервера] [java | bedrock (необязательно)]</i></h3>
+                            <p>Показывает информацию об указанном Minecraft-сервере. Платформу сервера (Java или Bedrock) бот определит автоматически, если аргумент не указан.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>инверт</b> <i>[текст]</i></h3>
+                            <p>Показывает ваш текст, но написанный задом наперед. (Не путать с командой <b>дабот инвертировать</b>!)</p>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="command-col">
                             <h3>дабот <b>амогуснуть</b> <i>[текст]</i></h3>
