--- a/commands.html
+++ b/commands.html
@@ -337,42 +337,51 @@
                         <div class="command-col">
                             <h3>дабот <b>зайти</b></h3>
                             <p>Заходит в тот голосовой канал, в котором находитесь вы.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>выйти</b></h3>
                             <p>Выходит из голосового канала, в котором он находится.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>громкость</b> <i>[число]</i></h3>
                             <p>Меняет громкость следующих песен (стандартная громкость: 100, но ограничений нет).</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>сейчас</b></h3>
                             <p>Показывает песню, которая играет сейчас.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                     </div>
                     <div class="row">
                         <div class="command-col">
                             <h3>дабот <b>скип</b></h3>
                             <p>Пропускает текущую песню.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>очередь</b></h3>
                             <p>Показывает список песен в очереди.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>удалитьизочереди</b> <i>[номерпесни]</i></h3>
                             <p>Удаляет песню под указанным номером из очереди.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>включить</b> <i>[название песни или ссылка на ютуб]</i></h3>
                             <p>Включает указанную песню в голосовом канале с вами или в голосовом канале с ботом.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                     </div>
                     <div class="row">
                         <div class="command-col">
                             <h3>дабот <b>гачи</b> <i>[название песни]</i></h3>
                             <p>Постарается найти и включить гачи версию указанной песни.</p>
+                            <h6><span style="color: #a22">Команда временно не работает!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>демотиватор</b> <i>[текст демотиватора]</i></h3>
