--- a/commands.html
+++ b/commands.html
@@ -64,6 +64,24 @@
                     <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
+                            <h3>дабот <b>включитьглобалчат</b> <i>[канал (необязательно)]</i></h3>
+                            <p>Включает функцию глобального чата в указанном канале, либо, если канал не указан, в канал, в котором было написано сообщение - все сообщения, отправленные в этот канал, будут рассылаться всем, кто тоже ввёл эту команду. <i>Для того, чтобы не рассылать сообщение в таком канале, поставьте ! перед сообщениемю</i></p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>выключитьглобалчат</b> <i>[канал (необязательно)]</i></h3>
+                            <p>Выключает функцию глобального чата в указанном канале. Если канал не указан, выключит глобальный чат в канале с вашим сообщением.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>спрятатьник</b></h3>
+                            <p>Прячет ваш ник в глобальном чате.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>показатьник</b></h3>
+                            <p>Показывает ваш ник в глобальном чате.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
                             <h3>дабот <b>заблокироватьканал</b> <i>[канал (необязательно)]</i></h3>
                             <p>Блокирует функцию ответок в указанном канале. Если канал не указан, заблокирует ответки в канале с вашим сообщением. (Команда блокирует только ответки, не команды!)</p>
                         </div>
