--- a/about.html
+++ b/about.html
@@ -66,6 +66,11 @@
                             <p>Подал идею для создания бота с ответками<br></p>
                             <h6><br><b>Volchok#2274</b></h6>
                         </div>
+                        <div class="command-col">
+                            <h3>BelGray</h3>
+                            <p>Подал идею глобального чата и <i>ещё одного проекта...</i></h3>
+                            <h6><br><b>BelGray#7589</b></h6>
+                        </div>
                     </div>
                 </div>
             </section>
