--- a/commands.html
+++ b/commands.html
@@ -74,12 +74,12 @@
                         <div class="command-col">
                             <h3>дабот <b>спрятатьник</b></h3>
                             <p>Прячет ваш ник в глобальном чате.</p>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>показатьник</b></h3>
                             <p>Показывает ваш ник в глобальном чате.</p>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                     </div>
                     <div class="row">
@@ -217,7 +217,7 @@
                         <div class="command-col">
                             <h3>дабот <b>нитро</b> <i>[кол-во (необязательно)]</i></h3>
                             <p>Создаёт ссылку на нитро. Если указана длина, создаст много ссылок и проверит каждую.</p>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>глитч</b> <i>[кол-во (необязательно)]</i></h3>
@@ -322,7 +322,7 @@
                         <div class="command-col">
                             <h3>дабот <b>точка</b> <i>[направление (необязательно)]</i></h3>
                             <p>Показывает поле игры в точку. Если выбрано направление (влево, вверх, вправо или вниз), точка пойдёт в этом направлении.</p>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>рулетка</b></h3>
@@ -349,7 +349,7 @@
                         <div class="command-col">
                             <h3>дабот <b>погода</b> <i>[место]</i></h3>
                             <p>Показывает погоду в указанном месте (если может).</p>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>анекдот</b> <i>[число (необязательно)]</i></h3>
@@ -410,7 +410,7 @@
                             <h3>дабот <b>демотиватор</b> <i>[текст демотиватора]</i></h3>
                             <p>Создаёт демотиватор из прикреплённой картинки и указанного текста.</p>
                             <h6>Необходимо прикрепить картинку!</h6>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>скажи</b> <i>[вопрос]?</i></h3>
@@ -511,13 +511,13 @@
                             <h3>дабот <b>ускоритьаудио</b> <i>[новая скорость]</i></h3>
                             <p>Ускоряет аудиофайл в то кол-во раз, что вы написали, не изменяя тон (аудио не будет писклявее). Скорость нужно указывать целым числом.</p>
                             <h6>Необходимо прикрепить аудиофайл!</h6>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>ускоритьвидео</b></h3>
                             <p>Ускоряет видео в 2 раза, не изменяя тон (аудио не будет писклявее).</p>
                             <h6>Необходимо прикрепить видеофайл!</h6>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>сигна</b> <i>[текст]</i></h3>
@@ -557,7 +557,7 @@
                             <h3>дабот <b>оставитьаудио</b></h3>
                             <p>Присылает аудиодорожку из видеофайла.</p>
                             <h6>Необходимо прикрепить видеофайл!</h6>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>перевернуть</b></h3>
@@ -586,7 +586,7 @@
                         <div class="command-col">
                             <h3>дабот <b>реши</b> <i>[пример или запрос]</i></h3>
                             <p>Ответит на запрос (на английском) или решит пример или уравнение.</p>
-                            <h6><span style="color: #1e1">Для команды необходим Da-bot Premium!</span></h6>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
                         </div>
                     </div>
                     <div class="row">
