--- a/external-resources.html
+++ b/external-resources.html
@@ -409,6 +409,11 @@
                             <td>Webpage/API</td>
                             <td>Used only in several commands</td>
                         </tr>
+                        <tr>
+                            <td>https://random-d.uk/api/v2/</td>
+                            <td>Webpage/API</td>
+                            <td>Used only in several commands</td>
+                        </tr>
                     </table>
                 </div>
             </section>
