--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="discord.html" class="small-button">Discord-сервер</a>
                 <br><br><br><br>
                 <p style="font-size: 16px">
-                    <a href="external-resources.html">Внешние ресурсы</a> - <a href="tos.html">Условия обслуживания</a> - <a href="https://forms.gle/nE1T9iMyh35kDVLUA">Добавить анекдот</a> - <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.donationalerts.com%2Fr%2Fdabot&sa=D&sntz=1&usg=AOvVaw2ARTabS3PqoYkV4qDVDJs-">Пожертвовать</a> - <a href="https://forms.gle/Tt3uxaVxUYiwZoPH8">Нашли ошибку?</a>
+                    <a href="external-resources.html">Внешние ресурсы</a> - <a href="tos.html">Условия обслуживания</a> - <a href="https://forms.gle/nE1T9iMyh35kDVLUA">Добавить анекдот</a> - <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.donationalerts.com%2Fr%2Fdabot&sa=D&sntz=1&usg=AOvVaw2ARTabS3PqoYkV4qDVDJs-">Пожертвовать/Купить Premium</a> - <a href="https://forms.gle/Tt3uxaVxUYiwZoPH8">Нашли ошибку?</a>
                 </p>
             </div>
         </section>
