--- a/commands.html
+++ b/commands.html
@@ -64,6 +64,26 @@
                     <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
+                            <h3>дабот <b>премиум</b></h3>
+                            <p>Показывает информацию о том, как купить Da-bot Premium.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>утки</b></h3>
+                            <p>Показывает картинку или гифку с уткой или утками.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>кастомембед</b> <i>[тип::заголовок::текст]</i></h3>
+                            <p>Создаёт кастомную панель (ембед).</p>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>опрос</b> <i>[заголовок::текст::реакция1::реакция2]</i></h3>
+                            <p>Создаёт кастомный опрос и ставит на него указанные реакции (если указаны корректно). Можно указывать несколько реакций, хоть одну, хоть две, хоть три, но следите за тем, что-бы в реакциях не было пробелов!</p>
+                            <h6><span style="color: #1a1">Для команды необходим Da-bot Premium!</span></h6>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
                             <h3>дабот <b>включитьглобалчат</b> <i>[канал (необязательно)]</i></h3>
                             <p>Включает функцию глобального чата в указанном канале, либо, если канал не указан, в канал, в котором было написано сообщение - все сообщения, отправленные в этот канал, будут рассылаться всем, кто тоже ввёл эту команду. <i>Для того, чтобы не рассылать сообщение в таком канале, поставьте ! перед сообщением.</i></p>
                         </div>
