--- a/commands.html
+++ b/commands.html
@@ -65,7 +65,7 @@
                     <div class="row">
                         <div class="command-col">
                             <h3>дабот <b>премиум</b></h3>
-                            <p>Показывает информацию о том, как купить Da-bot Premium.</p>
+                            <p>Показывает информацию о том, как купить Da-bot Premium и о том, есть ли он у вас.</p>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>утки</b></h3>
