--- a/external-resources.html
+++ b/external-resources.html
@@ -240,6 +240,11 @@
                             <td>Abandoned/unused</td>
                         </tr>
                         <tr>
+                            <td>discord.Webhook</td>
+                            <td>Python module component</td>
+                            <td>Minor usage/backend</td>
+                        </tr>
+                        <tr>
                             <td>colormap.hex2rgb</td>
                             <td>Python module component</td>
                             <td>Minor usage/backend</td>
