--- a/а-там-армяне-в-нарды-играют.html
+++ b/а-там-армяне-в-нарды-играют.html
@@ -11,6 +11,7 @@
         <link rel="icon" href="images/logo.png">
     </head>
     <body style="background-color: #fff">
+        <script src="js/rickroll.js"></script>
         <section class="armyane-header">
             <!-- <nav>
                 <a href="index.html">
