--- a/commands.html
+++ b/commands.html
@@ -64,6 +64,24 @@
                     <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
+                            <h3>дабот <b>когданг</b></h3>
+                            <p>Показывает, через сколько дней, часов, минут и секунд наступит Новый год.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>разброс</b> <i>[текст]</i></h3>
+                            <p>Перемешивает буквы в каждом слове по отдельности.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>разбросбукв</b> <i>[текст]</i></h3>
+                            <p>Перемешивает текст полностью, независимо от расположения слов.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>разбросслов</b> <i>[текст]</i></h3>
+                            <p>Разбрасывает слова по тексту (буквы в словах остаются на месте).</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
                             <h3>дабот <b>премиум</b></h3>
                             <p>Показывает информацию о том, как купить Da-bot Premium и о том, есть ли он у вас.</p>
                         </div>
