--- a/commands.html
+++ b/commands.html
@@ -64,6 +64,24 @@
                     <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
+                            <h3>дабот <b>когдазима</b></h3>
+                            <p>Показывает, через сколько времени наступит зима.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>когдавесна</b></h3>
+                            <p>Показывает, через сколько времени наступит весна.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>когдалето</b></h3>
+                            <p>Показывает, через сколько времени наступит лето.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>когдаосень</b></h3>
+                            <p>Показывает, через сколько времени наступит осень.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
                             <h3>дабот <b>когданг</b></h3>
                             <p>Показывает, через сколько дней, часов, минут и секунд наступит Новый год.</p>
                         </div>
