--- a/а-там-армяне-в-нарды-играют.html
+++ b/а-там-армяне-в-нарды-играют.html
@@ -20,7 +20,7 @@
             </nav> --> <!-- Can be uncommented in the future -->
             <div class="top-text-armyane">
                 <p>
-                   а там армяне в нарды играют
+                   А там армяне в нарды играют <img src="images/emoji.png" width=40px />
                 </p>
             </div>
         </section>
