--- a/external-resources.html
+++ b/external-resources.html
@@ -215,6 +215,11 @@
                             <td>Used in other modules</td>
                         </tr>
                         <tr>
+                            <td>binascii</td>
+                            <td>Python module</td>
+                            <td>Minor usage/backend</td>
+                        </tr>
+                        <tr>
                             <td>discord.FFmpegPSMAudio</td>
                             <td>Python module component</td>
                             <td>Minor usage/backend</td>
