--- a/external-resources.html
+++ b/external-resources.html
@@ -424,6 +424,11 @@
                             <td>Webpage/API</td>
                             <td>Used only in several commands</td>
                         </tr>
+                        <tr>
+                            <td>https://fish-text.ru/get/</td>
+                            <td>Webpage/API</td>
+                            <td>Used only in several commands</td>
+                        </tr>
                     </table>
                 </div>
             </section>
