--- a/about.html
+++ b/about.html
@@ -42,29 +42,13 @@
         <div class="page-contents">
             <section>
                 <div class="rect-row">
-                    <h1>Создатели</h1><br>
+                    <h1>Создатель бота</h1><br>
                     <div class="row">
                         <div class="command-col">
                             <h3>moontr3</h3>
-                            <p>Текущий владелец бота. Помогает его содержать, устраняет проблемы и выпускает обновления.</p>
                             <h6><br><a href="https://github.com/moontr3/">GitHub</a> - 
                             <a href="https://www.tiktok.com/@moontr3">TikTok</a> -
                             <b>moontr3#4950</b></h6>
-                        </div>
-                        <div class="command-col">
-                            <h3>k1l3n</h3>
-                            <p>Иногда даёт идеи, которые можно поместить в бота, также иногда и забирает мои.</p>
-                            <h6><br><b>k1l3n#0001</b></h6>
-                        </div>
-                        <div class="command-col">
-                            <h3>Volchok</h3>
-                            <p>Подал идею для создания бота с ответками<br></p>
-                            <h6><br><b>Volchok#2274</b></h6>
-                        </div>
-                        <div class="command-col">
-                            <h3>BelGray</h3>
-                            <p>Подал идею глобального чата и <i>ещё одного проекта...</i></h3>
-                            <h6><br><b>BelGray#7589</b></h6>
                         </div>
                     </div>
                 </div>
