--- a/commands.html
+++ b/commands.html
@@ -64,6 +64,24 @@
                     <h1>Список команд</h1><br>
                     <div class="row">
                         <div class="command-col">
+                            <h3>дабот <b>беременность</b></h3>
+                            <p>Показывает, беременный(ая) ли ты или нет, если да - то покажет срок беременности, а если нет - то покажет девственник ли ты.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>хексдамп</b> <i>[текст]</i></h3>
+                            <p>Хексдамп из линукса, только в да боте.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>рыбатекст</b></h3>
+                            <p>Генерирует параграф текста-филлера (случайных предложений). Не путать с <b>дабот лоремипсум<\b> - он генерирует случайные слова, а <b>дабот рыбатекст<\b> - понятные предложения.</p>
+                        </div>
+                        <div class="command-col">
+                            <h3>дабот <b>попит</b> <i>[длина (необязательно)] [высота (необязательно)]</i></h3>
+                            <p>Создаёт поп-ит, который можно жамкать.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="command-col">
                             <h3>дабот <b>когдазима</b></h3>
                             <p>Показывает, через сколько времени наступит зима.</p>
                         </div>
