--- a/commands.html
+++ b/commands.html
@@ -73,7 +73,7 @@
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>рыбатекст</b></h3>
-                            <p>Генерирует параграф текста-филлера (случайных предложений). Не путать с <b>дабот лоремипсум<\b> - он генерирует случайные слова, а <b>дабот рыбатекст<\b> - понятные предложения.</p>
+                            <p>Генерирует параграф текста-филлера (случайных предложений), состоящие из понятного текста.</p>
                         </div>
                         <div class="command-col">
                             <h3>дабот <b>попит</b> <i>[длина (необязательно)] [высота (необязательно)]</i></h3>
